Setting up match playing.

--- a/res/layout/activity_match_edit.xml
+++ b/res/layout/activity_match_edit.xml
@@ -1,16 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent" >
 
-    <fragment
-    	android:id="@+id/fragment1"
-    	android:name="com.javaking.clanteam.scouting.matches.StartMatchFragment"
+    <FrameLayout
+    	android:id="@+id/frame"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:layout_alignParentLeft="true"
-    	android:layout_alignParentTop="true"
-    	class="com.javaking.clanteam.scouting.matches.StartMatchFragment"
-    	tools:layout="@layout/fragment_start_match" />
+    	android:layout_alignParentTop="true" >
+    </FrameLayout>
 
 </RelativeLayout>
