--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -5,5 +5,6 @@
 		android:orderInCategory="100"
 		android:showAsAction="never"
 		android:title="@string/menu_settings"/>
+	<item android:id="@+id/startMatch" android:title="@string/startMatchLabel"></item>
 
 </menu>
